Fixed alignment issues with the images.

--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ body{
 .wab_header{
   background-image:url('../img/wab_header.png');
   background-repeat: no-repeat;
-  min-height: 245px;
+  min-height: 247px;
 }
 
 .wab_content{
